--- a/provision.yml
+++ b/provision.yml
@@ -22,7 +22,8 @@
 
     - name: docker-compose restart
       command: 'docker-compose down && docker-compose -f docker-compose.prod.yml up -d --build'
-        chdir: '/home/ubuntu/mediascape'
+        args:
+          chdir: '/home/ubuntu/mediascape'
 
     # docker + docker-compose 
     # ensure mediascape repository is present 
