--- a/provision.yml
+++ b/provision.yml
@@ -20,13 +20,7 @@
         dest: '/home/ubuntu/mediascape'
         accept_hostkey: yes
 
-    # - name: docker-compose restart
-    #   command: 'docker-compose down && docker-compose -f docker-compose.prod.yml up -d --build'
-    #     args:
-    #       chdir: '/home/ubuntu/mediascape'
-
-    # docker + docker-compose 
-    # ensure mediascape repository is present 
-    # ensure mediascape repository is up to date
-    # docker-compose restart
-    # migrate tables    
+    - name: docker-compose restart
+      shell: docker-compose down && docker-compose -f docker-compose.prod.yml up -d --build
+      args:
+        chdir: '/home/ubuntu/mediascape'
