--- a/provision.yml
+++ b/provision.yml
@@ -22,6 +22,6 @@
         accept_hostkey: yes
 
     - name: docker-compose restart
-      shell: docker-compose down && docker-compose -f docker-compose.prod.yml up -d --build
+      shell: docker-compose -f docker-compose.prod.yml down && docker-compose -f docker-compose.prod.yml up -d --build
       args:
         chdir: '/home/ubuntu/mediascape'
